  BF: HTTP(S) Content Types: Correction of xml/xsl/xslt to use application/xslt+xml
  BF: HTTP(S) Request: Correction of the request validation
      In some cases the request is aborted with status 400 when the network connector is busy,
      because the worker assumed that no data is being sent.
      Statuses 408 and 413 may have been overwritten with status 400.
  BF: Manual: Correction for chrome-based browsers
  CR: Manual: Improvement of the navigation
  CR: Project: Automatic update of the version in README.md
  CR: Build: Harmonization when updating the version
  CR: HTTP(S) Status: Added option [H] (Header Only)
      The option is used in devwex.ini section STATUSCODES and indicates a status,
      so that requests with this status are answered only with a header and without body.
  CR: HTTP(S) CGI: Not allowed/configured methods are now answered with status 405
      Previously the requests were answered with status 403.
  CR: HTTP(S) CGI: Update of the PHP preparation
  CR: HTTP(S) CGI: Change of the option [P] to [D]
  CR: HTTP(S) Directory Index: Optimization / reduction of code
      Generation of the file list in the Generator instead of the Worker.
  CR: HTTP(S) Directory Index: Change from placeholder 'files' to 'file'
  CR: HTTP(S) Directory Index: Omission of the formatting of the file size
      Approach: The directory index should only provide locale independent data.
      The formatting can later be done with CSS.      
  CR: HTTP(S) Directory Index: Realignment of the column 'type' 
  CR: Worker: Optimization / reduction of code
  CR: Remote: Optimization / reduction of code
  CR: Sources: Update of the comment format
  CR: XAPI: Integration of cascaded components
          e.g. com.seanox.xapi.Server > example.time.Server
      Components/classes are bound by delegated/cascaded calls instead of inheritance.
      This allows e.g. to use different constructors and the insertion of additional ClassLoaders.