@@ -152,6 +152,7 @@ Go to the program directory and start the program directly or by script.
 BF: HTTP(S) AccessLog: Correction in the file name of the log file (use http_host instead of remote_host)  
 BF: HTTP(S) Content Types: Correction of xml/xsl/xslt to use application/xslt+xml  
 BF: HTTP(S) Request: Correction of the request validation  
+BF: Generator: Correction of expensive/hungry RegExp  
 BF: Manual: Correction for chrome-based browsers  
 CR: Manual: Improvement of the navigation  
 CR: Project: Automatic update of the version in README.md  
