@@ -5,6 +5,7 @@
       In some cases the request is aborted with status 400 when the network connector is busy,
       because the worker assumed that no data is being sent.
       Statuses 408 and 413 may have been overwritten with status 400.
+  BF: Generator: Correction of expensive/hungry RegExp    
   BF: Manual: Correction for chrome-based browsers
   CR: Manual: Improvement of the navigation
   CR: Project: Automatic update of the version in README.md
